# rh-sniper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rh_sniper.py  run_live_100.sh  run_paper_100.sh  run_paper_ev3_rank0.sh  run_shadow_collect.sh  state.dry.json
.trellis/spec/backend/: index.md  logging-guidelines.md  paper-ev-research.md  quality-guidelines.md
.trellis/spec/guides/: index.md
.trellis/tasks/archive/2026-07/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-07/07-17-exec-quote-paper/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-17-lp-drop-hazard/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-17-opp-set-funnel/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-17-rh-ev-pipeline/: design.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-18-paper-ev2-offline-buckets/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-18-paper-ev2-offline-buckets/research/: offline_buckets.md
docs/: HANDOFF_PAPER_EV2_DILEMMA.md  HANDOFF_WINRATE_WALLET_ALIGNMENT.md
rh_sniper/: __init__.py  cli.py  engine.py
scripts/: coverage_report.py  hazard_report.py  paper_ev2_buckets.py  test_paper_exec.py
