[project]
name = "rh-sniper"
version = "0.1.0"
description = "Robinhood-chain meme sniper via GMGN OpenAPI (strategy replica, not copy-trade)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ArchdevilForge" }]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
rh-sniper = "rh_sniper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rh_sniper"]
